Making scrape async
