# src/main/java/jasper/web/rest/ScrapeController.java
@@ -12,8 +12,8 @@ import jasper.service.dto.RefDto;
 import org.hibernate.validator.constraints.Length;
 import org.hibernate.validator.constraints.URL;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Profile;
 import org.springframework.http.CacheControl;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -23,19 +23,16 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.context.request.WebRequest;
 
-import javax.servlet.http.HttpServletResponse;
 import javax.validation.constraints.Pattern;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.util.concurrent.TimeUnit;
 
 import static jasper.domain.Ref.URL_LEN;
 import static jasper.domain.proj.HasOrigin.ORIGIN_LEN;
-import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
+@Profile("proxy | file-cache")
 @RestController
 @RequestMapping("api/v1/scrape")
 @Validated
@@ -76,83 +73,10 @@ public class ScrapeController {
 		@ApiResponse(responseCode = "200"),
 		@ApiResponse(responseCode = "500", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
 	})
-	@GetMapping("fetch")
-	void fetch(
-		WebRequest request,
-		HttpServletResponse response,
-		@RequestParam @Length(max = URL_LEN) String url,
-		@RequestParam(defaultValue = "false") boolean thumbnail
-	) throws IOException {
-		var cache = scrapeService.fetch(url);
-		if (cache != null && isNotBlank(cache.getId())) {
-			response.setHeader(HttpHeaders.ETAG, "\"" + cache.getId() + "\"");
-			response.setHeader(HttpHeaders.CACHE_CONTROL, CacheControl.maxAge(5, TimeUnit.DAYS).mustRevalidate().cachePrivate().getHeaderValue());
-			if (isNotBlank(cache.getMimeType())) response.setHeader(HttpHeaders.CONTENT_TYPE, cache.getMimeType());
-			if (request.checkNotModified(cache.getId())) {
-				if (cache.getContentLength() != null) response.setIntHeader(HttpHeaders.CONTENT_LENGTH, Math.toIntExact(cache.getContentLength()));
-				response.sendError(HttpStatus.NOT_MODIFIED.value());
-			} else {
-				response.setStatus(HttpStatus.OK.value());
-				try (var os = response.getOutputStream()) {
-					scrapeService.fetch(url, thumbnail, os);
-				}
-			}
-		} else {
-			response.setHeader(HttpHeaders.CACHE_CONTROL, CacheControl.maxAge(0, TimeUnit.MILLISECONDS).mustRevalidate().cachePrivate().getHeaderValue());
-			response.setStatus(HttpStatus.NOT_FOUND.value());
-		}
-	}
-
-	@ApiResponses({
-		@ApiResponse(responseCode = "200"),
-		@ApiResponse(responseCode = "500", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-	})
 	@GetMapping("rss")
 	ResponseEntity<String> rss(@RequestParam @Length(max = URL_LEN) String url) throws IOException {
 		return ResponseEntity.ok()
 			.cacheControl(CacheControl.maxAge(100, TimeUnit.DAYS).cachePrivate())
 			.body(scrapeService.rss(url));
-	}
-
-	@ApiResponses({
-		@ApiResponse(responseCode = "200"),
-		@ApiResponse(responseCode = "500", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-	})
-	@GetMapping
-	ResponseEntity<String> scrape(@RequestParam @Length(max = URL_LEN) String url) throws URISyntaxException, IOException {
-		return ResponseEntity.ok()
-			.cacheControl(CacheControl.maxAge(100, TimeUnit.DAYS).cachePrivate())
-			.body(scrapeService.scrape(url));
-	}
-
-	@ApiResponses({
-		@ApiResponse(responseCode = "200"),
-		@ApiResponse(responseCode = "500", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-	})
-	@PostMapping("refresh")
-	String refresh(@RequestParam @Length(max = URL_LEN) String url) throws IOException {
-		return scrapeService.refresh(url);
-	}
-
-	@ApiResponses({
-		@ApiResponse(responseCode = "200"),
-		@ApiResponse(responseCode = "500", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-	})
-	@PostMapping("cache")
-	RefDto cache(
-		@RequestParam(required = false) String mime,
-		InputStream data
-	) throws IOException {
-		return scrapeService.cache(data, mime);
-	}
-
-	@ApiResponses({
-		@ApiResponse(responseCode = "204"),
-		@ApiResponse(responseCode = "500", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-	})
-	@ResponseStatus(HttpStatus.NO_CONTENT)
-	@PostMapping("clear-deleted")
-	void clearDeleted() {
-		scrapeService.clearDeleted();
 	}
 }
